--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,14 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.0';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
   <app-root></app-root>
 </body>
 </html>
