some changes, and temp

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>YrcVitFrontEnd</title>
+  <title>Youth Red Cross - VIT</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="logo_title.ico">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <div id="fb-root"></div>
